user password hash structure created.
